# fast-marketplace-application

./: index.html  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/application/: error.rs  mod.rs
src-tauri/src/application/tests/repositories/: image.rs
src-tauri/src/application/tests/services/webscraping/: marketplace.rs
src-tauri/src/application/usecases/: add_property.rs  add_vehicle.rs  get_marketplace.rs  mod.rs  renew_listings.rs  signin_marketplace.rs  signout_marketplace.rs
src-tauri/src/domain/entities/: mod.rs  property.rs  vehicle.rs
src-tauri/src/domain/entities/models/: mod.rs
src-tauri/src/domain/entities/models/property/: category.rs  mod.rs  model.rs
src-tauri/src/domain/entities/models/vehicle/: bodystyle.rs  category.rs  condition.rs  fuel.rs  manufacturer.rs  mod.rs
src-tauri/src/domain/repositories/: image.rs
src-tauri/src/domain/services/: error.rs  mod.rs  property.rs  vehicle.rs
src-tauri/src/domain/services/webscraping/: marketplace.rs
src-tauri/src/infra/: logger.rs  mod.rs  status.rs
src-tauri/src/infra/http/: mod.rs  routes.rs  setup.rs
src-tauri/src/infra/http/dtos/: add_property.rs  add_vehicle.rs  marketplace.rs  mod.rs
src-tauri/src/infra/http/handlers/: add_property.rs  add_vehicle.rs  get_marketplace.rs  healthz.rs  mod.rs  renew_listings.rs  signin_marketplace.rs  signout_marketplace.rs  status.rs
src-tauri/src/infra/repositories/: image.rs
src-tauri/src/infra/services/: mod.rs
src-tauri/src/infra/services/webscraping/: marketplace.rs
(+1 files in other folders)
