[package]
name = "application"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "application_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
url = "2"
chromiumoxide = { version = "0.9.1", features = ["fetcher", "rustls", "zip8"] }
futures = "0.3.32"
dirs = "5"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
image = "0.25"
